5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1644_1053.log
== TEST (2019-04-09 17:00:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do patrono?")
if(patrono==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 8
    mensagem = patrono "nao eh patrono do Harry Potter"
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:00:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do patrono?")
if(patrono==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono "nao eh patrono do Harry Potter")
print(mensagem)
-- ERROR:
File "XXXX", line 8
    mensagem = (patrono "nao eh patrono do Harry Potter")
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:00:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do patrono?")
if(patrono==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 8
    mensagem = patrono "nao eh patrono do Harry Potter"
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:02:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do patrono?")
if(patrono==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono, "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:02:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do patrono?")
if(patrono==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono, "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:03:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do patrono?")
if(patrono==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:04:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do patrono?")
if(patrono == cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:04:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do patrono?")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:04:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do patrono?")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:05:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do patrono?")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:05:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Qual o nome do patrono?")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.211584
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:38:35) 
-- CODE:
patrono = input("Qual o nome do patrono?")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.168916
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
